This file documents the revision history for Perl extension Catalyst.

5.7003   2006-09-21 16:29:45
        - Additions and updates to tutorial

5.7002   2006-09-17 19:35:32
        - unescape captures to match args
        - fix for relative Chained under namespace '' (root)
        - fix for hashrefs in action attributes from config
        - fix for Chained to require correct number of CaptureArgs

5.7001   2006-07-19 23:46:54
        - fix for component loading
        - uri_for and uri_with now behave as they used to with non-
          array references

5.7000   2006-07-07 08:08:08
        - fix FCGI.pm warning message with FastCGI engine
        - bumped inc::Module::Install to 0.63 in Makefile.PL
        - fixes to uri_for_action for DispatchType::Chained
	- Further doc work.
	- Minor code cleanups 
	- Changed catalyst.pl to depend on Catalyst::Devel

5.70_03  2006-06-28 16:42:00
        - fixup to registered plugins debug at app startup
        - refactored Catalyst::Utils::home

5.70_02  2006-06-27 11:51:00
	- Updated tutorial.

5.70_01  2006-06-26 10:49:00

        - fixed a Catalyst::Base bug causing duplicate action registrations
        - modified DispatchTypes to support multiple registrations
        - added Catalyst::Runtime module as dist marker
        - added Catalyst::ActionChain and Chained DispatchType
        - removed retarded registration requirement in dispatcher
        - removed Module::Pluggable::Fast hack in favor of
          Module::Pluggable::Object
        - extended uri_for, added dispatcher->uri_for_action
        - added Catalyst::Base->action_for('methodname')
        - checked and tested :Args multimethod dispatch
        - added ability to set action attributes from controller config
        - added merge_config_hashes() as a convenience method
        - Swapped out CGI::Cookie in favour of CGI::Simple::Cookie
        - Removed test dependencies on Test::NoWarnings, Test::MockObject